--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,9 +36,9 @@
 	                                    <button onclick="document.getElementById('id01').style.display='block'" >
                                             <img src="investment_files/botaoLog.jpg" class="dell"></button> 
 					   </td><td> 
-					    <img src="investment/Investiment.jpg" class="dell">						
+					    <img src="investment_files/Investiment.jpg" class="dell">						
                         </td><td> 
-					    <img src="investment/galvao.jpg" class="dell" >
+					    <img src="investment_files/galvao.jpg" class="dell" >
 					   </td></tr></tbody></table>   
 				 <!--	</div> coloquei isso -->
                  <!-- The Modal -->
@@ -48,7 +48,7 @@
                         <div class="imgcontainer">
                             <span onclick="document.getElementById('id01').style.display='none'"
                                                class="close" title="Close Modal">&times;</span>
-                            <img src="investment_files/Bankgrand.jpg" alt="Avatar" class="avatar">
+                            <img src="investment_files/galvao.jpg" alt="Avatar" class="avatar">
                            </div>
                             <div class="container">
                                  <label><b>Username</b></label>
@@ -90,12 +90,12 @@
 		   </div></div>
 		   <div data-thumb="investment_files/volcane.jpg" data-src="investment_files/volcane.jpg">
 		   <div class="camera_caption fadeFromBottom">
-		   <center><h1>For further Information Contact us: </h1><h3>info@investments.com</h3><br></center>						
+		   <center><h1>For further Information Contact us: </h1><h3>info@dellaquilainvestments.com</h3><br></center>						
 		   </div></div>	   
 	    </div>  <!-- #camera_wrap -->    
 			    <footer id="footer-main">	
 					<div id="copyright">
-						  © 2017 EugenioJavaBank  All Rights Reserved. 					
+						  © 2017 Dell'Aquila Investments.  All Rights Reserved. 					
 					</div><!-- #copyright -->			
 			    </footer><!-- #footer-main -->  
     </div><!-- #body-content-wrapper -->
