--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,7 +48,7 @@
                         <div class="imgcontainer">
                             <span onclick="document.getElementById('id01').style.display='none'"
                                                class="close" title="Close Modal">&times;</span>
-                            <img src="investment_files/galvao.jpg" alt="Avatar" class="avatar">
+                            <img src="investment_files/grande.jpg" alt="Avatar" class="avatar">
                            </div>
                             <div class="container">
                                  <label><b>Username</b></label>
